# pytsfiler

./: .env.template  ENV_CONFIG.md  README.md  __init__.py  pyproject.toml  test_with_env.py
pytsfiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
