[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytsfiler"
version = "0.2.0"
description = "Python client library for TSF (TypeScript File) server API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TSF Team", email = "contact@tsfiler.com"}
]
keywords = ["file", "upload", "download", "tsf", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Archiving"
]

dependencies = [
    "requests>=2.32.3",
    "pycryptodome>=3.21.0",
    "dotenv>=0.9.9",
    "google-cloud-secret-manager>=2.20.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8.0",
    "aiofiles>=0.8.0"
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950"
]

[project.urls]
Homepage = "https://github.com/fimenten/pytsfiler"
Repository = "https://github.com/fimenten/pytsfiler.git"
Issues = "https://github.com/fimenten/pytsfiler/issues"

[tool.setuptools]
packages = ["pytsfiler"]

[tool.setuptools.package-dir]
pytsfiler = "."

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true